fix z-index carousel and sidebar issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,7 +114,7 @@ nav  *{
 	padding: 0.5rem 0;
 	width: 100%;
 	box-shadow: 0 6px 10px -4px rgba(0,0,0,.15);
-	z-index: 2;
+	z-index: 1050;
 }
 
 a.navbar-brand {
